// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tag Basic 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Class Name Override 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="css-1wsp713 psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Error 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Icon Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--icon"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Link 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <a
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium"
    href="https://duckduckgo.com/"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Tag Long Text 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
  >
    <span
      className="psds-tag__label"
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Long Text With Icon 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon"
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      This is the string that goes on forever and always. There really isn't an end. Wow.
    </span>
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--is-pressed"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--is-pressed"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Pressed Link 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <a
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--is-pressed"
    href="#"
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Tag Pressed With Icon 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    aria-pressed={true}
    className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon psds-tag--is-pressed"
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Sizes 1`] = `
<div
  data-css-1gfhbu8=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-small"
    >
      <span
        className="psds-tag__label"
      >
        small
      </span>
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-medium"
    >
      <span
        className="psds-tag__label"
      >
        medium
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Sizes With Icons 1`] = `
<div
  data-css-1gfhbu8=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-small psds-tag--icon"
    >
      <span
        className="psds-tag__label psds-tag__label--icon"
      >
        small
      </span>
      <div
        className="psds-icon psds-icon--size-small psds-icon--color-undefined"
        onClick={[Function]}
        style={
          Object {
            "cursor": "default",
          }
        }
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
  >
    <div
      className="psds-tag psds-theme--dark psds-tag--size-medium psds-tag--icon"
    >
      <span
        className="psds-tag__label psds-tag__label--icon"
      >
        medium
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
        onClick={[Function]}
        style={
          Object {
            "cursor": "default",
          }
        }
      >
        <svg
          aria-label="placeholder icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Small Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-small"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag Style Override 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--size-medium"
    style={
      Object {
        "background": "red",
      }
    }
  >
    <span
      className="psds-tag__label"
    >
      hello world
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Tag With Icon Button 1`] = `
<div
  className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
>
  <div
    className="psds-tag psds-theme--dark psds-tag--clickable psds-tag--size-medium psds-tag--icon"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="psds-tag__label psds-tag__label--icon"
    >
      hello world
    </span>
    <div
      className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      <svg
        aria-label="placeholder icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
